creacion, gestion y eliminacion testeados. Falta testear modificacion y conexion con el agregador